# Oblivion_Android

./: .gitignore  ARCHITECTURE.md  AUDIO_SYSTEM.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  FPS_CONTROL_GUIDE.md  GAMEPLAY.md  INSTALLATION.md  JNI_AUDIO_BRIDGE_IMPLEMENTATION.md  JNI_DESIGN_SUMMARY.md  KNOWN_ISSUES.md  PERFORMANCE_REPORT.md  PHASE4_TASK1_NPC_INTEGRATION.md  PHASE4_TASK2_DOOR_SYSTEM.md  PHASE6_TEST_PLAN.md  PHASE_7_1_STATUS.md  PHASE_7_RELEASE_SUMMARY.md  PROJECT_STATUS.md  README.ja.md  README.md  SETTINGS.md  START_HERE.md  build.gradle  build_output.txt  convert_icon.py  fix_jni_warnings.py  generate_icons.py  gradle.properties  gradlew.bat  oblivion.keystore  settings.gradle
Projects/oblivion-android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
Projects/oblivion-android/app/src/main/cpp/assets/: asset_manager.cpp  asset_manager.h  bsa_parser.cpp  bsa_parser.h  dds_loader.cpp  nif_parser.cpp
Projects/oblivion-android/app/src/main/cpp/engine/: camera.cpp  renderer.cpp  renderer.h
Projects/oblivion-android/app/src/main/cpp/game/: ai_state_machine.cpp  ai_state_machine.h  book.h  book_database.cpp  book_database.h  combat_manager.cpp  dialogue_system.cpp  dialogue_system.h  game_manager.cpp  game_manager.h  game_state.h  interaction_manager.cpp  interaction_manager.h  npc.cpp  npc.h  npc_manager.cpp  npc_manager.h  quest.h  quest_manager.cpp  spell_manager.h  test_scenario.cpp  test_scenario.h
Projects/oblivion-android/app/src/main/cpp/geometry/: cube.h  material.cpp  material.h  mesh.cpp  mesh.h
Projects/oblivion-android/app/src/main/cpp/localization/: localization_manager.cpp
Projects/oblivion-android/app/src/main/cpp/profiling/: performance_monitor.cpp  performance_monitor.h
Projects/oblivion-android/app/src/main/cpp/save_system/: save_manager.cpp  save_manager.h  save_system.cpp  save_system.h  save_validator.cpp  save_validator.h
Projects/oblivion-android/app/src/main/cpp/system/: settings_manager.cpp  settings_manager.h
Projects/oblivion-android/app/src/main/cpp/test/: NPC_AI_INTEGRATION_TEST_REPORT.md  npc_ai_integration_test.cpp  save_system_test.cpp
Projects/oblivion-android/app/src/main/cpp/ui/: debug_hud.cpp  debug_hud.h  image_renderer.cpp  image_renderer.h  quest_ui.cpp  quest_ui.h  save_load_ui.cpp  save_load_ui.h  settings_ui.cpp  settings_ui.h  text_renderer.cpp  text_renderer.h  title_screen.cpp  title_screen.h
Projects/oblivion-android/app/src/main/cpp/world/: cell_loader.h  terrain.h  world_data.h  world_manager.cpp  world_manager.h
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  jni_audio_bridge.cpp  jni_audio_bridge.h  jni_bridge.cpp  native-lib.cpp  native_activity.cpp
app/src/main/cpp/assets/: asset_manager.cpp  asset_manager.h  dds_loader.cpp  dds_loader.h  nif_parser.cpp  nif_parser.h  nif_types.h
app/src/main/cpp/audio/: audio_3d.cpp  audio_3d.h  audio_clip.h  audio_manager.cpp  audio_manager.h  audio_source.h  jni_audio_bridge.cpp  jni_audio_bridge.h
app/src/main/cpp/engine/: Engine.cpp  Engine.h  camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture_loader.cpp  texture_loader.h
app/src/main/cpp/engine/graphics/: VulkanRenderer.cpp  VulkanRenderer.h  retro_filter.cpp  retro_filter.h
app/src/main/cpp/game/: book.h  book_database.cpp  book_database.h  cell.cpp  cell.h  combat_manager.cpp  combat_manager.h  consumable_system.cpp  consumable_system.h  container.cpp  container.h  dialogue.cpp  dialogue.h  door.cpp  door.h  equipment_effect_system.cpp  equipment_effect_system.h  interactable.cpp  interactable.h  interaction_manager.cpp  interaction_manager.h  inventory.cpp  inventory.h  inventory_manager.cpp  inventory_manager.h  item.h  merchant.cpp  merchant.h  npc.cpp  npc.h  npc_manager.cpp  npc_manager.h  player.cpp  player.h  player_controller.cpp  player_controller.h  quest.h  quest_manager.cpp  quest_manager.h  spell.h  (+4 more)
app/src/main/cpp/geometry/: cube.cpp  cube.h  material.cpp  material.h  mesh.cpp  mesh.h
app/src/main/cpp/include/AL/: al.h  alc.h
app/src/main/cpp/include/glm/: glm.hpp
app/src/main/cpp/include/glm/gtc/: matrix_transform.hpp  type_ptr.hpp
app/src/main/cpp/input/: InputSystem.cpp  InputSystem.h  touch_input_handler.cpp  touch_input_handler.h
app/src/main/cpp/inventory/: equipment_manager.cpp  equipment_manager.h  inventory_coordinator.cpp  inventory_coordinator.h  inventory_grid.cpp  inventory_grid.h  item_base.h  item_factory.cpp  item_factory.h
app/src/main/cpp/jni/: com_example_oblivion_OblivionEngine.cpp  com_example_oblivion_OblivionEngine.h
app/src/main/cpp/localization/: localization_manager.cpp  localization_manager.h
app/src/main/cpp/map/: map_system.cpp  map_system.h
app/src/main/cpp/profiling/: performance_monitor.cpp
app/src/main/cpp/save_system/: save_manager.cpp  save_manager.h
app/src/main/cpp/system/: cheat_manager.h  settings_manager.cpp  settings_manager.h
app/src/main/cpp/ui/: debug_hud.cpp  debug_hud.h  hud_renderer.cpp  hud_renderer.h  inventory_ui.cpp  inventory_ui.h  placeholder_assets.cpp  placeholder_assets.h  save_load_ui.cpp  save_load_ui.h  settings_ui.cpp  settings_ui.h  text_renderer.cpp  text_renderer.h  title_screen.cpp  title_screen.h  ui_action_prompt.cpp  ui_action_prompt.h  ui_active_effects.cpp  ui_active_effects.h  ui_alert_notification.cpp  ui_alert_notification.h  ui_button.cpp  ui_button.h  ui_character_creation.cpp  ui_character_creation.h  ui_character_sheet.cpp  ui_character_sheet.h  ui_component.cpp  ui_component.h  ui_dialogue.cpp  ui_dialogue.h  ui_draw_helper.cpp  ui_draw_helper.h  ui_floating_text.cpp  ui_floating_text.h  ui_hud_compass.cpp  ui_hud_compass.h  ui_hud_status_display.cpp  ui_hud_status_display.h  (+34 more)
app/src/main/cpp/util/: ThreadSafeQueue.h
app/src/main/cpp/world/: cell.cpp  cell.h  cell_loader.cpp  cell_loader.h  cell_transition_manager.cpp  cell_transition_manager.h  door.cpp  door.h  grid.cpp  grid.h  terrain.cpp  world_data.h  world_item.h  world_item_manager.cpp  world_item_manager.h  world_manager.cpp  world_manager.h
(+51 files in other folders)
